--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p id="CampoDadosDb">
             </p>
     
-            <button class="BotaoPrimario">Baixar</button>
+            <button class="BotaoPrimario">Baixar planilha de vendas</button>
         </div>
     </main>
 
