--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <input placeholder="Série" type="text" name="serie" id="serie" required>
                 <input placeholder="Produto" type="text" name="produto" id="produto" required>
                 <input placeholder="Quantidade" type="number" name="quantidade" id="quantidade" required>
+                <input placeholder="Valor pago" type="number" name="valor" id="valor" required>
                 <input type="submit" class="BotaoPrimario">
             </form>
         </div>
