--- a/index.html
+++ b/index.html
@@ -18,10 +18,14 @@
         <div class="CorpoElemento">
             <h1>Registrar venda</h1>
     
-            <form>
-                <input placeholder="Comprador" type="text" name="nome" id="nome" required>
-                <input placeholder="Série" type="text" name="serie" id="serie" required>
-                <input placeholder="Produto" type="text" name="produto" id="produto" required>
+            <form id="FormularioRegistrarVenda">
+                <input placeholder="Comprador" type="text" name="nome" id="nome">
+                <select name="produto" id="RegistrarVendaProduto">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                </select>
                 <input placeholder="Quantidade" type="number" name="quantidade" id="quantidade" required>
                 <input placeholder="Valor pago" type="number" name="valor" id="valor" required>
                 <input type="submit" class="BotaoPrimario">
