--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
             <h1>Registrar venda</h1>
     
             <form id="FormularioRegistrarVenda">
+                <label for="nome">Comprador (opcional)</label>
                 <input placeholder="Comprador" type="text" name="nome" id="nome">
+                <label for="RegistrarVendaProduto">Valor pago</label>
                 <select name="produto" id="RegistrarVendaProduto">
                     <option value="volvo">Volvo</option>
                     <option value="saab">Saab</option>
                     <option value="mercedes">Mercedes</option>
                     <option value="audi">Audi</option>
                 </select>
-                <input placeholder="Quantidade" type="number" name="quantidade" id="quantidade" required>
-                <input placeholder="Valor pago" type="number" name="valor" id="valor" required>
+                <label for="quantidade">Quantidade</label>
+                <input placeholder="Quantidade" type="number" value=1 name="quantidade" id="quantidade" required>
+                <label for="valor">Valor pago</label>
+                <input placeholder="0,00" type="text" name="valor" id="valor" required>
                 <input type="submit" class="BotaoPrimario">
             </form>
         </div>
