we aint miss the mill

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <input placeholder="Renato Augusto Almeida dos Santos" type="text" name="nome" id="nome">
                 <label for="RegistrarVendaProduto">Produto comprado</label>
                 <select name="produto" id="RegistrarVendaProduto">
-                    <option value="volvo">Volvo</option>
+                    <option value="volvo">Aguarde...</option>
                     <option value="saab">Saab</option>
                     <option value="mercedes">Mercedes</option>
                     <option value="audi">Audi</option>
