--- a/identificar.html
+++ b/identificar.html
@@ -19,7 +19,7 @@
             <h1>Identifique-se</h1>
     
             <form id="FormularioEntrarVendedor">
-                <label for="nome">Seu nome</label>
+                <label for="nome">Seu nome completo</label>
                 <input placeholder="Fulano da Silva" type="text" name="nome" id="nome" required>
                 <input type="submit" value="Começar a vender" class="BotaoPrimario">
             </form>
