--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p id="CampoDadosDb">
             </p>
     
-            <button class="BotaoPrimario">Baixar planilha de vendas</button>
+            <button class="BotaoPrimario" onclick="open('https:\/\/evolved-legible-spider.ngrok-free.app/download')">Baixar planilha de vendas</button>
         </div>
     </main>
 
