--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
             <p id="CampoDadosDb">
             </p>
     
-            <button class="BotaoPrimario" onclick="open('https:\/\/evolved-legible-spider.ngrok-free.app/download')">Baixar planilha de vendas</button>
+            <a href="https://evolved-legible-spider.ngrok-free.app/download" style="
+                text-decoration: none;
+                display: flex;
+            "><button class="BotaoPrimario" style="
+                display: flex;
+                flex-grow: 1;
+                justify-content: center;
+            ">Baixar planilha de vendas</button></a>
         </div>
     </main>
 
