--- a/identificar.html
+++ b/identificar.html
@@ -14,8 +14,12 @@
         <h1>Sistema de vendas da comissão de formatura</h1>
     </header>
 
-    <main>
-        <div class="CorpoElemento">
+    <main style="
+        justify-content: center;
+    ">
+        <div class="CorpoElemento" style="
+            max-width: 50%;
+        ">
             <h1>Identifique-se</h1>
     
             <form id="FormularioEntrarVendedor">
