--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <h1>Adicionar estoque</h1>
     
             <form id="FormularioAdicionarEstoque">
-                <label for="nome">Nome do produto</label>
-                <input placeholder="Geladinho" type="text" name="nome" id="nome" required>
-                <label for="quantidade">Quantidade a adicionar</label>
-                <input placeholder="99" type="number" name="quantidade" id="quantidade" required>
+                <label for="nome2">Nome do produto</label>
+                <input placeholder="Geladinho" type="text" name="nome" id="nome2" required>
+                <label for="quantidade2">Quantidade a adicionar</label>
+                <input placeholder="99" type="number" name="quantidade" id="quantidade2" required>
                 <input type="submit" value="Adicionar" class="BotaoPrimario">
             </form>
         </div>
