--- a/identificar.html
+++ b/identificar.html
@@ -18,7 +18,7 @@
         justify-content: center;
     ">
         <div class="CorpoElemento" style="
-            max-width: 50%;
+            max-width: 414px;
         ">
             <h1>Identifique-se</h1>
     
