--- a/desligado.html
+++ b/desligado.html
@@ -16,13 +16,11 @@
 
     <main>
         <div class="CorpoElemento" style="max-width: 414px">
-            <h1>Identifique-se</h1>
+            <h1>Site desligado</h1>
     
-            <form id="FormularioEntrarVendedor">
-                <label for="nome">Seu nome completo</label>
-                <input placeholder="Fulano da Silva" type="text" name="nome" id="nome" required>
-                <input type="submit" value="Começar a vender" class="BotaoPrimario">
-            </form>
+            <p>
+                Recarregue para tentar novamente
+            </p>
         </div>
     </main>
 
@@ -30,7 +28,7 @@
 
     </footer>
 
-    <script src="identificar.js"></script>
+    <script src="desligado.js"></script>
 
 </body>
 
