--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <label for="nome">Comprador (opcional)</label>
                 <input placeholder="Renato Augusto Almeida dos Santos" type="text" name="nome" id="nome">
                 <label for="RegistrarVendaProduto">Produto comprado</label>
-                <select name="produto" id="RegistrarVendaProduto">
+                <select name="produto" id="RegistrarVendaProduto" required>
                     <option value="volvo">Aguarde...</option>
                     <option value="saab">Saab</option>
                     <option value="mercedes">Mercedes</option>
@@ -32,6 +32,16 @@
                 <input placeholder="Quantidade" type="number" value=1 name="quantidade" id="quantidade" required>
                 <label for="valor">Valor pago</label>
                 <input placeholder="0,00" type="text" name="valor" id="valor" required>
+                <label for="metodo_de_pagamento">Método de pagamento</label>
+                <select name="metodo_de_pagamento" id="metodo_de_pagamento" required>
+                    <option value="dinheiro">Dinheiro</option>
+                    <option value="dinheiro">Cartão</option>
+                </select>
+                <label for="fiado">Fiado</label>
+                <select name="fiado" id="fiado" required>
+                    <option value="nao">Não</option>
+                    <option value="sim">Sim</option>
+                </select>
                 <input type="submit" class="BotaoPrimario">
             </form>
         </div>
