--- a/identificar.html
+++ b/identificar.html
@@ -14,7 +14,7 @@
         <h1>Sistema de vendas da comissão de formatura</h1>
     </header>
 
-    <main>
+    <main style="justify-content: center">
         <div class="CorpoElemento" style="max-width: 414px">
             <h1>Identifique-se</h1>
     
