cartão opção padrão

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <input placeholder="0,00" type="text" name="valor" id="valor" required>
                 <label for="metodo_de_pagamento">Método de pagamento</label>
                 <select name="metodo_de_pagamento" id="metodo_de_pagamento" required>
+                    <option value="cartao">Cartão</option>
                     <option value="dinheiro">Dinheiro</option>
-                    <option value="dinheiro">Cartão</option>
                 </select>
                 <label for="fiado">Fiado</label>
                 <select name="fiado" id="fiado" required>
