--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </select>
                 <label for="quantidade">Quantidade</label>
                 <input placeholder="Quantidade" type="number" value=1 name="quantidade" id="quantidade" required>
-                <label for="valor">Valor pago (opcional, 2x quantidade)</label>
-                <input placeholder="0,00" type="text" name="valor" id="valor">
+                <label for="valor">Valor pago</label>
+                <input placeholder="0,00" type="text" name="valor" id="valor" disabled>
                 <label for="metodo_de_pagamento">Método de pagamento</label>
                 <select name="metodo_de_pagamento" id="metodo_de_pagamento" required>
                     <option value="cartao">Cartão</option>
