--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             <form id="FormularioAdicionarEstoque">
                 <label for="nome2">Nome do produto</label>
                 <input placeholder="Geladinho" type="text" name="nome" id="nome2" required>
+                <label for="valor2">Valor da unidade</label>
+                <input placeholder="0,00" type="text" name="valor" id="valor2" required>
                 <label for="quantidade2">Quantidade a adicionar</label>
                 <input placeholder="99" type="number" name="quantidade" id="quantidade2" required>
                 <input type="submit" value="Adicionar" class="BotaoPrimario">
