--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
                 <label for="quantidade">Quantidade</label>
                 <input placeholder="Quantidade" type="number" value=1 name="quantidade" id="quantidade" required>
                 <label for="valor">Valor pago (opcional)</label>
-                <input placeholder="0,00" type="text" name="valor" id="valor">
+                <input placeholder="Apenas se for diferente do valor padrão do produto" type="text" name="valor" id="valor">
                 <label for="metodo_de_pagamento">Método de pagamento</label>
                 <select name="metodo_de_pagamento" id="metodo_de_pagamento" required>
                     <option value="cartao">Cartão</option>
                     <option value="dinheiro">Dinheiro</option>
+                    <option value="outro">Outro</option>
                 </select>
                 <label for="fiado">Fiado</label>
                 <select name="fiado" id="fiado" required>
