--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <label for="quantidade">Quantidade</label>
                 <input placeholder="Quantidade" type="number" value=1 name="quantidade" id="quantidade" required>
                 <label for="valor">Valor pago (opcional)</label>
-                <input placeholder="Apenas se for diferente do valor padrão do produto" type="text" name="valor" id="valor">
+                <input placeholder="Apenas necessário se for diferente do valor padrão do produto" type="text" name="valor" id="valor">
                 <label for="metodo_de_pagamento">Método de pagamento</label>
                 <select name="metodo_de_pagamento" id="metodo_de_pagamento" required>
                     <option value="cartao">Cartão</option>
