pra ficar mais fácil

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
             <form id="FormularioRegistrarVenda">
                 <label for="nome">Comprador (opcional)</label>
-                <input placeholder="Renato Augusto Almeida dos Santos" type="text" name="nome" id="nome">
+                <input placeholder="Nome completo (e número e turma, caso for fiado)" type="text" name="nome" id="nome">
                 <label for="RegistrarVendaProduto">Produto comprado</label>
                 <select name="produto" id="RegistrarVendaProduto" required>
                     <option value="volvo">Aguarde...</option>
