--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <div class="CorpoElemento" style="width: 25dvw">
+        <div class="CorpoElemento Principal">
             <h1>Registrar venda</h1>
     
             <form id="FormularioRegistrarVenda">
@@ -77,7 +77,7 @@
             ">Baixar planilha de vendas</button></a>
         </div>
 
-        <div class="CorpoElemento" style="box-shadow: none; padding: unset; gap: 12px;">
+        <div class="CorpoElemento Categoria">
 
             <div class="CorpoElemento">
                 <h1>Devedores fiado</h1>
@@ -115,9 +115,7 @@
         
     </main>
 
-    <footer>
-
-    </footer>
+    <p id="Copyright">aaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
 
     <script src="main.js"></script>
 
