--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         
     </main>
 
-    <p id="Copyright">aaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+    <p id="Copyright">© Site feito pelo Renato (2025)</p>
 
     <script src="main.js"></script>
 
