--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     
             <form id="FormularioAdicionarEstoque">
                 <label for="nome2">Nome do produto</label>
-                <input placeholder="Geladinho" type="text" name="nome" id="nome2" required>
+                <input placeholder="Picolé" type="text" name="nome" id="nome2" required>
                 <label for="valor2">Valor da unidade do produto</label>
                 <input placeholder="0,00" type="text" name="valor" id="valor2" required>
                 <label for="quantidade2">Quantidade a adicionar</label>
