Correções de título

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         
         <!-- Estoque e planilha -->
         <div class="CorpoElemento">
-            <h1>Dados e planilha</h1>
+            <h1>Estoque e planilha</h1>
 
             <p id="CampoDadosDb">
             </p>
@@ -84,7 +84,7 @@
         <div class="CorpoElemento Categoria">
 
             <div class="CorpoElemento">
-                <h1>Devedores fiado</h1>
+                <h1>Devedores</h1>
 
                 <p id="CampoDevedoresDb">
                 </p>
