--- a/new.html
+++ b/new.html
@@ -36,7 +36,7 @@
 
     <p id="Copyright">64.99324-9400 © Site feito pelo Renato (2025)</p>
 
-    <script src="main.js"></script>
+    <script src="new.js"></script>
 
 </body>
 
