Formulário do aside

--- a/new.html
+++ b/new.html
@@ -50,9 +50,15 @@
             
         </div>
 
-        <aside class="Ativo">
+        <aside>
             <h1>Nova venda</h1>
             <form id="FormNovVenda">
+                <label>Nome</label>
+                <input type="text" placeholder="Teste">
+                <label>Nome</label>
+                <input type="text" placeholder="Teste">
+                <label>Nome</label>
+                
                 <input type="text" placeholder="Teste">
             </form>
         </aside>
