--- a/index.html
+++ b/index.html
@@ -25,27 +25,29 @@
         <div id="Produtos"></div>
 
         <aside>
-            <h1>Nova venda</h1>
-            <p id="DadosVolateis"></p>
-            <h2>Dados</h2>
-            <form id="FormularioRegistrarVenda">
-                <label for="nome">Comprador (opcional)</label>
-                <input placeholder="Nome completo (e número e turma, caso for fiado)" type="text" name="nome" id="nome">
-                <label for="valor">Valor pago (opcional)</label>
-                <input placeholder="Apenas necessário se for diferente do valor padrão do produto" type="text" name="valor" id="valor">
-                <label for="metodo_de_pagamento">Método de pagamento</label>
-                <select name="metodo_de_pagamento" id="metodo_de_pagamento" required>
-                    <option value="cartao">Cartão</option>
-                    <option value="dinheiro">Dinheiro</option>
-                    <option value="outro">Outro</option>
-                </select>
-                <label for="fiado">Fiado</label>
-                <select name="fiado" id="fiado" required>
-                    <option value="nao">Não</option>
-                    <option value="sim">Sim</option>
-                </select>
-                <input type="submit" class="BotaoPrimario">
-            </form>
+            <div id="AsideScroll">
+                <h1>Nova venda</h1>
+                <p id="DadosVolateis"></p>
+                <h2>Dados</h2>
+                <form id="FormularioRegistrarVenda">
+                    <label for="nome">Comprador (opcional)</label>
+                    <input placeholder="Nome completo (e número e turma, caso for fiado)" type="text" name="nome" id="nome">
+                    <label for="valor">Valor pago (opcional)</label>
+                    <input placeholder="Apenas necessário se for diferente do valor padrão do produto" type="text" name="valor" id="valor">
+                    <label for="metodo_de_pagamento">Método de pagamento</label>
+                    <select name="metodo_de_pagamento" id="metodo_de_pagamento" required>
+                        <option value="cartao">Cartão</option>
+                        <option value="dinheiro">Dinheiro</option>
+                        <option value="outro">Outro</option>
+                    </select>
+                    <label for="fiado">Fiado</label>
+                    <select name="fiado" id="fiado" required>
+                        <option value="nao">Não</option>
+                        <option value="sim">Sim</option>
+                    </select>
+                    <input type="submit" class="BotaoPrimario">
+                </form>
+            </div>
         </aside>
 
     </div>
