--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="Produtos"></div>
 
         <aside>
-            <div id="AsideScroll">
+            <div id="AsideContents">
                 <h1>Nova venda</h1>
                 <p id="DadosVolateis"></p>
                 <h2>Dados</h2>
