Aside e index.js

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <p id="Copyright">64.99324-9400 © Site feito pelo Renato (2025)</p>
 
-    <script src="main.js"></script>
+    <script src="index.js"></script>
 
 </body>
 
