--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>Sistema de vendas da comissão de formatura</h1>
         <nav>
             <a href="" class="SeletorDeAba">Registrar</a>
-            <a href="" class="SeletorDeAba">Novo produto</a>
-            <a href="" class="SeletorDeAba">Área do fiado</a>
-            <a href="" class="SeletorDeAba">Estoque e dados</a>
+            <a href="novo" class="SeletorDeAba">Novo produto</a>
+            <a href="fiado" class="SeletorDeAba">Área do fiado</a>
+            <a href="estoque" class="SeletorDeAba">Estoque e dados</a>
         </nav>
     </header>
 
@@ -50,7 +50,7 @@
             </div>
         </aside>
 
-    </div>
+    </main>
 
     <p id="Copyright">64.99324-9400 © Site feito pelo Renato (2025)</p>
 
