--- a/novo.html
+++ b/novo.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Sistema de vendas da comissão de formatura</h1>
         <nav>
-            <a href="" class="SeletorDeAba">Registrar</a>
+            <a href="." class="SeletorDeAba">Registrar</a>
             <a href="novo" class="SeletorDeAba">Novo produto</a>
             <a href="fiado" class="SeletorDeAba">Área do fiado</a>
             <a href="estoque" class="SeletorDeAba">Estoque e dados</a>
