telas antigas adaptadas

--- a/desligado.html
+++ b/desligado.html
@@ -15,12 +15,9 @@
     </header>
 
     <main style="justify-content: center">
-        <div class="CorpoElemento" style="max-width: 414px">
+        <div style="margin: auto">
             <h1>Site desligado</h1>
-    
-            <p>
-                Recarregue para tentar novamente
-            </p>
+            <p>Recarregue para tentar novamente</p>
         </div>
     </main>
 
