--- a/identificar.html
+++ b/identificar.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
@@ -15,12 +14,12 @@
     </header>
 
     <main style="justify-content: center">
-        <div class="CorpoElemento" style="max-width: 414px">
+        <div style="max-width: 414px;display: flex;flex-direction: column;margin: auto;">
             <h1>Identifique-se</h1>
-    
-            <form id="FormularioEntrarVendedor">
+
+            <form id="FormularioEntrarVendedor" style="display: flex;flex-direction: column;gap: 8px;">
                 <label for="nome">Seu nome completo</label>
-                <input placeholder="Fulano da Silva" type="text" name="nome" id="nome" required>
+                <input placeholder="Fulano da Silva" type="text" name="nome" id="nome" required="">
                 <input type="submit" value="Começar a vender" class="BotaoPrimario">
             </form>
         </div>
