--- a/devedores.html
+++ b/devedores.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="." class="SeletorDeAba">Registrar</a>
             <a href="novo" class="SeletorDeAba">Novo produto</a>
-            <a href="fiado" class="SeletorDeAba">Área do fiado</a>
+            <a href="devedores" class="SeletorDeAba">Devedores</a>
             <a href="estoque" class="SeletorDeAba">Estoque e dados</a>
         </nav>
     </header>
@@ -28,7 +28,7 @@
 
     <p id="Copyright">64.99324-9400 © Site feito pelo Renato (2025)</p>
 
-    <script src="fiado.js"></script>
+    <script src="devedores.js"></script>
 
 </body>
 
