--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="." class="SeletorDeAba">Registrar</a>
             <a href="novo" class="SeletorDeAba">Novo produto</a>
-            <a href="fiado" class="SeletorDeAba">Área do fiado</a>
+            <a href="devedores" class="SeletorDeAba">Devedores</a>
             <a href="estoque" class="SeletorDeAba">Estoque e dados</a>
         </nav>
     </header>
