--- a/old.html
+++ b/old.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>DFM 2025 - Comissão de formatura</title>
-    <link href="style.css" rel="stylesheet">
+    <link href="old.css" rel="stylesheet">
 </head>
 
 <body>
@@ -121,7 +121,7 @@
 
     <p id="Copyright">64.99324-9400 © Site feito pelo Renato (2025)</p>
 
-    <script src="main.js"></script>
+    <script src="old.js"></script>
 
 </body>
 
