--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
                 <p id="DadosVolateis"></p>
                 <h1>Dados</h1>
                 <form id="FormularioRegistrarVenda">
-                    <label for="nome">Comprador</label>
-                    <input placeholder="Fulano da Silva" type="text" name="nome" id="nome">
-                    <label for="metodo_de_pagamento">Método de pagamento*</label>
+                    <label for="nome">Nome do cliente</label>
+                    <input placeholder="Opcional" type="text" name="nome" id="nome">
+                    <label for="metodo_de_pagamento">Método de pagamento</label>
                     <select name="metodo_de_pagamento" id="metodo_de_pagamento" required>
                         <option value="cartao">Cartão</option>
                         <option value="dinheiro">Dinheiro</option>
                         <option value="outro">Outro</option>
                     </select>
-                    <label for="fiado">Fiado*</label>
+                    <label for="fiado">Fiado</label>
                     <select name="fiado" id="fiado" required>
                         <option value="nao">Não</option>
                         <option value="sim">Sim</option>
