--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
                     <label>Método de pagamento</label>
                     <div class="Opcoes">
                         <input type="radio" name="metodo_de_pagamento" id="cartao" value="cartao" checked>
-                        <label for="cartao">Cartão</label>
+                        <label for="cartao"><i class="fa-solid fa-credit-card"></i></label>
                         <input type="radio" name="metodo_de_pagamento" id="dinheiro" value="dinheiro">
-                        <label for="dinheiro">Dinheiro</label>
+                        <label for="dinheiro"><i class="fa-solid fa-money-bill-wave"></i></label>
                         <input type="radio" name="metodo_de_pagamento" id="outro" value="outro">
-                        <label for="outro">Outro</label>
+                        <label for="outro"><i class="fa-brands fa-pix"></i></label>
                     </div>
                     <label>Fiado</label>
                     <div class="Opcoes">
-                        <input type="radio" name="fiado" id="fiado_nao" value="nao">
-                        <label for="fiado_nao">Não</label>
+                        <input type="radio" name="fiado" id="fiado_nao" value="nao" checked>
+                        <label for="fiado_nao"><i class="fa-solid fa-xmark"></i></label>
                         <input type="radio" name="fiado" id="fiado_sim" value="sim">
-                        <label for="fiado_sim">Sim</label>
+                        <label for="fiado_sim"><i class="fa-solid fa-check"></i></label>
                     </div>
                     <input type="submit" class="BotaoPrimario">
                 </form>
