Novas abas funcionais e cabeçalho

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <nav>
             <a href="." class="SeletorDeAba">Registrar</a>
             <a href="novoproduto" class="SeletorDeAba">Novo produto</a>
-            <a href="devedores" class="SeletorDeAba">Devedores</a>
-            <a href="estoque" class="SeletorDeAba">Estoque e dados</a>
+            <a href="estoque" class="SeletorDeAba">Estoque, dados e dívidas</a>
         </nav>
     </header>
 
