--- a/desligado.html
+++ b/desligado.html
@@ -21,9 +21,7 @@
         </div>
     </main>
 
-    <footer>
-
-    </footer>
+    <p id="Copyright">64.99324-9400 © Site feito pelo Renato (2025)</p>
 
     <script src="desligado.js"></script>
 
