--- a/estoque.html
+++ b/estoque.html
@@ -15,14 +15,65 @@
         <nav>
             <a href="." class="SeletorDeAba">Registrar</a>
             <a href="novoproduto" class="SeletorDeAba">Novo produto</a>
-            <a href="devedores" class="SeletorDeAba">Devedores</a>
-            <a href="estoque" class="SeletorDeAba">Estoque e dados</a>
+            <a href="estoque" class="SeletorDeAba">Estoque, dados e dívidas</a>
         </nav>
     </header>
 
     <main>
 
-        ESTOQUE
+        <!-- Estoque e planilha -->
+        <div class="CorpoElemento">
+            <h1>Estoque e planilha</h1>
+
+            <p id="CampoDadosDb">
+            </p>
+    
+            <a href="https://evolved-legible-spider.ngrok-free.app/download" style="
+                text-decoration: none;
+                display: flex;
+            "><button class="BotaoPrimario" style="
+                display: flex;
+                flex-grow: 1;
+                justify-content: center;
+            ">Baixar planilha de vendas</button></a>
+        </div>
+
+        <!-- Área do fiado -->
+        <div class="CorpoElemento Categoria">
+
+            <div class="CorpoElemento">
+                <h1>Devedores</h1>
+
+                <p id="CampoDevedoresDb">
+                </p>
+        
+                <a href="https://evolved-legible-spider.ngrok-free.app/devedores" style="
+                    text-decoration: none;
+                    display: flex;
+                "><button class="BotaoPrimario" style="
+                    display: flex;
+                    flex-grow: 1;
+                    justify-content: center;
+                ">Baixar planilha de cobrança</button></a>
+            </div>
+
+            <div class="CorpoElemento">
+                <h1>Pagar dívida</h1>
+                <form id="FormularioPagarDivida">
+                    <label for="NomeDevedorPagando">Nome</label>
+                    <select name="devedor" id="NomeDevedorPagando" required>
+                        <option value="volvo">Aguarde...</option>
+                        <option value="saab">Saab</option>
+                        <option value="mercedes">Mercedes</option>
+                        <option value="audi">Audi</option>
+                    </select>
+                    <label for="ValorDivida">Valor pago</label>
+                    <input placeholder="0,00" type="text" name="valor" id="ValorDivida" required>
+                    <input type="submit" class="BotaoPrimario" value="Pagar">
+                </form>
+            </div>
+
+        </div>
 
     </main>
 
