--- a/identificar.html
+++ b/identificar.html
@@ -25,9 +25,7 @@
         </div>
     </main>
 
-    <footer>
-
-    </footer>
+    <p id="Copyright">64.99324-9400 © Site feito pelo Renato (2025)</p>
 
     <script src="identificar.js"></script>
 
