--- a/novoproduto.html
+++ b/novoproduto.html
@@ -15,14 +15,26 @@
         <nav>
             <a href="." class="SeletorDeAba">Registrar</a>
             <a href="novoproduto" class="SeletorDeAba">Novo produto</a>
-            <a href="devedores" class="SeletorDeAba">Devedores</a>
-            <a href="estoque" class="SeletorDeAba">Estoque e dados</a>
+            <a href="estoque" class="SeletorDeAba">Estoque, dados e dívidas</a>
         </nav>
     </header>
 
     <main>
 
-        NOVO PRODUTO
+        <!-- Adicionar estoque-->
+        <div class="CorpoElemento">
+            <h1>Adicionar estoque</h1>
+    
+            <form id="FormularioAdicionarEstoque">
+                <label for="nome2">Nome do produto</label>
+                <input placeholder="Picolé" type="text" name="nome" id="nome2" required>
+                <label for="valor2">Valor da unidade do produto</label>
+                <input placeholder="0,00" type="text" name="valor" id="valor2" required>
+                <label for="quantidade2">Quantidade a adicionar</label>
+                <input placeholder="99" type="number" name="quantidade" id="quantidade2" required>
+                <input type="submit" value="Adicionar" class="BotaoPrimario">
+            </form>
+        </div>
 
     </main>
 
