Redefinição das abas e ajustes funcionais

--- a/desligado.html
+++ b/desligado.html
@@ -14,8 +14,8 @@
         <h1>Sistema de vendas da comissão de formatura</h1>
     </header>
 
-    <main style="justify-content: center">
-        <div style="margin: auto">
+    <main class="MainVertical">
+        <div class="ElementoCentral">
             <h1>Site desligado</h1>
             <p>Recarregue para tentar novamente</p>
         </div>
