--- a/identificar.html
+++ b/identificar.html
@@ -13,8 +13,8 @@
         <h1>Sistema de vendas da comissão de formatura</h1>
     </header>
 
-    <main style="justify-content: center">
-        <div style="max-width: 414px;display: flex;flex-direction: column;margin: auto;">
+    <main class="MainVertical">
+        <div class="ElementoCentral">
             <h1>Identifique-se</h1>
 
             <form id="FormularioEntrarVendedor" style="display: flex;flex-direction: column;gap: 8px;">
