--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1>Sistema de vendas da comissão de formatura</h1>
         <nav>
             <a href="." class="SeletorDeAba">Registrar</a>
-            <a href="novoproduto" class="SeletorDeAba">Novo produto</a>
-            <a href="estoque" class="SeletorDeAba">Estoque, dados e dívidas</a>
+            <a href="estoque" class="SeletorDeAba">Estoque</a>
+            <a href="dividas" class="SeletorDeAba">Dívidas</a>
         </nav>
     </header>
 
