Mudança de nomes

--- a/dividas.html
+++ b/dividas.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Sistema de vendas da comissão de formatura</h1>
         <nav>
-            <a href="." class="SeletorDeAba">Registrar</a>
+            <a href="." class="SeletorDeAba">Venda</a>
             <a href="estoque" class="SeletorDeAba">Estoque</a>
             <a href="dividas" class="SeletorDeAba">Dívidas</a>
         </nav>
@@ -62,7 +62,7 @@
 
     <p id="Copyright">64.99324-9400 © Site feito pelo Renato (2025)</p>
 
-    <script src="estoque.js"></script>
+    <script src="dividas.js"></script>
 
 </body>
 
