--- a/estoque.html
+++ b/estoque.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Sistema de vendas da comissão de formatura</h1>
         <nav>
-            <a href="." class="SeletorDeAba">Registrar</a>
+            <a href="." class="SeletorDeAba">Venda</a>
             <a href="estoque" class="SeletorDeAba">Estoque</a>
             <a href="dividas" class="SeletorDeAba">Dívidas</a>
         </nav>
@@ -54,12 +54,12 @@
                 <input type="submit" value="Adicionar" class="BotaoPrimario">
             </form>
         </div>
-        
+
     </main>
 
     <p id="Copyright">64.99324-9400 © Site feito pelo Renato (2025)</p>
 
-    <script src="novoproduto.js"></script>
+    <script src="estoque.js"></script>
 
 </body>
 
