--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Sistema de vendas da comissão de formatura</h1>
         <nav>
-            <a href="." class="SeletorDeAba">Registrar</a>
+            <a href="." class="SeletorDeAba">Venda</a>
             <a href="estoque" class="SeletorDeAba">Estoque</a>
             <a href="dividas" class="SeletorDeAba">Dívidas</a>
         </nav>
