Estilo e categorização corrigidas

--- a/estoque.html
+++ b/estoque.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <main class="MainVertical">
+    <main>
 
         <!-- Estoque e planilha -->
         <div class="CorpoElemento">
