--- a/identificar.html
+++ b/identificar.html
@@ -13,7 +13,7 @@
         <h1>Sistema de vendas da comissão de formatura</h1>
     </header>
 
-    <main class="MainVertical">
+    <main>
         <div class="ElementoCentral">
             <h1>Identifique-se</h1>
 
