--- a/desligado.html
+++ b/desligado.html
@@ -14,7 +14,7 @@
         <h1>Sistema de vendas da comissão de formatura</h1>
     </header>
 
-    <main class="MainVertical">
+    <main>
         <div class="ElementoCentral">
             <h1>Site desligado</h1>
             <p>Recarregue para tentar novamente</p>
