--- a/dividas.html
+++ b/dividas.html
@@ -21,41 +21,38 @@
 
     <main>
 
-        <!-- Área do fiado -->
-        <div class="CorpoElemento Categoria">
+        <!-- Lista de devedores -->
+        <div class="CorpoElemento">
+            <h1>Devedores</h1>
 
-            <div class="CorpoElemento">
-                <h1>Devedores</h1>
+            <p id="CampoDevedoresDb">
+            </p>
+    
+            <a href="https://evolved-legible-spider.ngrok-free.app/devedores" style="
+                text-decoration: none;
+                display: flex;
+            "><button class="BotaoPrimario" style="
+                display: flex;
+                flex-grow: 1;
+                justify-content: center;
+            ">Baixar planilha de cobrança</button></a>
+        </div>
 
-                <p id="CampoDevedoresDb">
-                </p>
-        
-                <a href="https://evolved-legible-spider.ngrok-free.app/devedores" style="
-                    text-decoration: none;
-                    display: flex;
-                "><button class="BotaoPrimario" style="
-                    display: flex;
-                    flex-grow: 1;
-                    justify-content: center;
-                ">Baixar planilha de cobrança</button></a>
-            </div>
-
-            <div class="CorpoElemento">
-                <h1>Pagar dívida</h1>
-                <form id="FormularioPagarDivida">
-                    <label for="NomeDevedorPagando">Nome</label>
-                    <select name="devedor" id="NomeDevedorPagando" required>
-                        <option value="volvo">Aguarde...</option>
-                        <option value="saab">Saab</option>
-                        <option value="mercedes">Mercedes</option>
-                        <option value="audi">Audi</option>
-                    </select>
-                    <label for="ValorDivida">Valor pago</label>
-                    <input placeholder="0,00" type="text" name="valor" id="ValorDivida" required>
-                    <input type="submit" class="BotaoPrimario" value="Pagar">
-                </form>
-            </div>
-
+        <!-- Pagar dívida -->
+        <div class="CorpoElemento">
+            <h1>Pagar dívida</h1>
+            <form id="FormularioPagarDivida">
+                <label for="NomeDevedorPagando">Nome</label>
+                <select name="devedor" id="NomeDevedorPagando" required>
+                    <option value="volvo">Aguarde...</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                </select>
+                <label for="ValorDivida">Valor pago</label>
+                <input placeholder="0,00" type="text" name="valor" id="ValorDivida" required>
+                <input type="submit" class="BotaoPrimario" value="Pagar">
+            </form>
         </div>
 
     </main>
