Elementos melhorados e exibição aprimorada

--- a/dividas.html
+++ b/dividas.html
@@ -23,19 +23,21 @@
 
         <!-- Lista de devedores -->
         <div class="CorpoElemento">
-            <h1>Devedores</h1>
+            <div class="ScrollContent">
+                <h1>Devedores</h1>
 
-            <p id="CampoDevedoresDb">
-            </p>
-    
-            <a href="https://evolved-legible-spider.ngrok-free.app/devedores" style="
-                text-decoration: none;
-                display: flex;
-            "><button class="BotaoPrimario" style="
-                display: flex;
-                flex-grow: 1;
-                justify-content: center;
-            ">Baixar planilha de cobrança</button></a>
+                <p id="CampoDevedoresDb">
+                </p>
+        
+                <a href="https://evolved-legible-spider.ngrok-free.app/devedores" style="
+                    text-decoration: none;
+                    display: flex;
+                "><button class="BotaoPrimario" style="
+                    display: flex;
+                    flex-grow: 1;
+                    justify-content: center;
+                ">Baixar planilha de cobrança</button></a>
+            </div>
         </div>
 
         <!-- Pagar dívida -->
