--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
 
         <aside>
-            <div id="AsideContents">
+            <div class="ScrollContent">
                 <h1>Nova venda</h1>
                 <p id="DadosVolateis"></p>
                 <h1>Dados</h1>
