--- a/estoque.html
+++ b/estoque.html
@@ -44,6 +44,7 @@
                 <h1>Estoque e planilha</h1>
 
                 <p id="CampoDadosDb">
+                    <span class="Carregando ElementoCentral"></span>
                 </p>
         
                 <a href="https://evolved-legible-spider.ngrok-free.app/download" style="
