--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
             </div>
         </aside>
 
-        <div id="Produtos"></div>
+        <div id="Produtos">
+            <span class="Carregando ElementoCentral"></span>
+        </div>
 
     </main>
 
