Botões viraram links

--- a/estoque.html
+++ b/estoque.html
@@ -47,14 +47,7 @@
                     <span class="Carregando ElementoCentral"></span>
                 </p>
         
-                <a href="https://evolved-legible-spider.ngrok-free.app/download" style="
-                    text-decoration: none;
-                    display: flex;
-                "><button class="BotaoPrimario" style="
-                    display: flex;
-                    flex-grow: 1;
-                    justify-content: center;
-                ">Baixar planilha de vendas</button></a>
+                <a class="BotaoPrimario" href="https://evolved-legible-spider.ngrok-free.app/download">Baixar planilha de vendas</a>
             </div>
         </div>
 
