--- a/dividas.html
+++ b/dividas.html
@@ -47,14 +47,7 @@
                     <span class="Carregando ElementoCentral"></span>
                 </p>
         
-                <a href="https://evolved-legible-spider.ngrok-free.app/devedores" style="
-                    text-decoration: none;
-                    display: flex;
-                "><button class="BotaoPrimario" style="
-                    display: flex;
-                    flex-grow: 1;
-                    justify-content: center;
-                ">Baixar planilha de cobrança</button></a>
+                <a class="BotaoPrimario" href="https://evolved-legible-spider.ngrok-free.app/devedores">Baixar planilha de cobrança</a>
             </div>
         </div>
 
