Exibição dos produtos em grade no estoque

--- a/estoque.html
+++ b/estoque.html
@@ -43,9 +43,9 @@
             <div class="ScrollContent">
                 <h1>Estoque e planilha</h1>
 
-                <p id="CampoDadosDb">
+                <div class="Produtos" id="CampoDadosDb">
                     <span class="Carregando ElementoCentral"></span>
-                </p>
+                </div>
         
                 <a class="BotaoPrimario" href="https://evolved-legible-spider.ngrok-free.app/download">Baixar planilha de vendas</a>
             </div>
