--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </aside>
 
-        <div class="Produtos">
+        <div id="Produtos" class="Produtos">
             <span class="Carregando ElementoCentral"></span>
         </div>
 
