Margem no estoque

--- a/estoque.html
+++ b/estoque.html
@@ -43,7 +43,7 @@
             <div class="ScrollContent">
                 <h1>Estoque e planilha</h1>
 
-                <div class="Produtos" id="CampoDadosDb">
+                <div class="Produtos" id="CampoDadosDb" style="margin-top:8px;margin-bottom:8px;">
                     <span class="Carregando ElementoCentral"></span>
                 </div>
         
