--- a/dividas.html
+++ b/dividas.html
@@ -33,7 +33,7 @@
                     <option value="audi">Audi</option>
                 </select>
                 <label for="ValorDivida">Valor pago</label>
-                <input placeholder="0,00" type="text" name="valor" id="ValorDivida" required>
+                <input placeholder="0,00" type="number" name="valor" id="ValorDivida" required>
                 <input type="submit" class="BotaoPrimario" value="Pagar">
             </form>
         </div>
