--- a/identificar.html
+++ b/identificar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-    <title>DFM 2025 - Comissão de formatura</title>
+    <title>Comissão do Delcides</title>
     <link href="style.css" rel="stylesheet">
 </head>
 
