Taxa de 5% e Grátis

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                         <label for="dinheiro"><i class="fa-solid fa-money-bill-wave"></i></label>
                         <input type="radio" name="metodo_de_pagamento" id="outro" value="outro">
                         <label for="outro"><i class="fa-brands fa-pix"></i></label>
+                        <input type="radio" name="metodo_de_pagamento" id="gratis" value="gratis">
+                        <label for="gratis" style="color:transparent;box-shadow:none;"><i class="fa-solid fa-star"></i></label>
                     </div>
                     <label>Fiado</label>
                     <div class="Opcoes">
