Valor com taxa se atualizar

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <label for="nome">Nome do cliente</label>
                     <input placeholder="Opcional" type="text" name="nome" id="nome">
                     <label>Método de pagamento</label>
-                    <div class="Opcoes">
+                    <div class="Opcoes" id="metodo">
                         <input type="radio" name="metodo_de_pagamento" id="cartao" value="cartao" checked>
                         <label for="cartao"><i class="fa-solid fa-credit-card"></i></label>
                         <input type="radio" name="metodo_de_pagamento" id="dinheiro" value="dinheiro">
