--- a/estoque.html
+++ b/estoque.html
@@ -31,7 +31,7 @@
                 <label for="icone">Ícone do produto</label>
                 <input type="text" name="icone" id="icone" placeholder="Link da imagem">
                 <label for="valor">Valor da unidade do produto</label>
-                <input placeholder="0,00" type="number" name="valor" id="valor" min="1">
+                <input placeholder="0,00" type="text" name="valor" id="valor" min="1">
                 <label for="quantidade">Quantidade a adicionar</label>
                 <input placeholder="99" type="number" name="quantidade" id="quantidade">
                 <input type="submit" value="Adicionar" class="BotaoPrimario">
